DOMjudge Programming Contest Judging System

Version 5.1.3 - DEV
-------------------
 - Use 'officialised' http redir mirror in dj_make_chroot script.
 - Properly detect libJSONcpp headers on Debian and Redhat-like systems.
 - Fix HTML regex pattern to work in Chrome browser.
 - Fix variable name typo in error message.
 - Various small documentation improvements.

Version 5.1.2 - 11 June 2016
----------------------------
 - Don't compare unfreeze- and deactivatetime when latter is unset.
 - Print problems sorted by label as required by JSON scoreboard spec.
 - Fix importing penalty-time and freezetime from contest.yaml.
 - Add auditlog entry when an executable script is edited.
 - Fix appearance of "null" problem colour, and use British spelling of
   "colour" in web interface.
 - Fix dj_make_chroot failing on chmod of non-existent file.
 - Fix variable name to properly display PHP configured timezone.
 - Fix dj-setup-database status command.
 - Add transaction around submission upload to prevent race condition
   between a submission present, but not yet the source files.
 - Don't raise error when post_max_size=0, since that means unlimited.
 - Fix editing of executable metadata. Thanks Josse van Dobben de Bruyn.
 - In the REST API write SQL debug info to logfile to not break the API.
 - Fix variable name typos in www/jury/{team_categories,testcase}.php.
 - Fix installing all SQL upgrade scripts.
 - Fix bug storing 'null' as string for expected_results.
 - Various small updates to the admin and jury manuals.

Version 5.1.1 - 2 April 2016
----------------------------
 - Fix bug in signal handler in runguard.
 - Explicitely ask for basic authentication if not authenticated
  in event feed.
 - Exit judgedaemon when no default chroot dir set and
   CHROOT_SCRIPT not set
 - Fix importing example problem statements into database.
 - Fix contest 'start now' button problem with timezones (#191).
 - Restrict API access to problems depending on role (#200).